<resources>
    <string name="app_name">Higher Lower</string>
    <string name="lastThrow"> Previous Number of Dots On The Dice: %d</string>
    <string name="title">Guess if the next throw is going to be lower, equal or higher</string>
    <string name="higher">Higher</string>
    <string name="equal">Equal</string>
    <string name="lower">Lower</string>
    <string name="dice">Dice</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect D:</string>
</resources>
